[gd_scene load_steps=7 format=3 uid="uid://yuyjg6el1hud"]

[ext_resource type="Texture2D" uid="uid://d3iolkpn1ow8v" path="res://graphics/gargy.png" id="1_1dxx3"]
[ext_resource type="Script" uid="uid://c3c8fhnk1tjuq" path="res://prototyping/player.gd" id="1_h7don"]
[ext_resource type="Texture2D" uid="uid://uwpiscipjlho" path="res://icon.svg" id="3_t5ujd"]
[ext_resource type="Script" uid="uid://l5sl63gab1q1" path="res://prototyping/debug_music_manager.gd" id="5_kf62a"]
[ext_resource type="Script" uid="uid://c8kdxjgevcjb" path="res://scripts/track_loader.gd" id="5_q5qk3"]
[ext_resource type="AudioStream" uid="uid://bcx62ldj5k2a1" path="res://audio/ravekeeper_level2_v2.ogg" id="6_kf62a"]

[node name="BPMLab" type="Node2D"]

[node name="Player" type="Node2D" parent="."]
script = ExtResource("1_h7don")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(3, 3)
texture = ExtResource("1_1dxx3")

[node name="Slots" type="Node2D" parent="."]
position = Vector2(576, 72)

[node name="Left" type="Sprite2D" parent="Slots"]
self_modulate = Color(0.258824, 0.258824, 0.258824, 0.192157)
position = Vector2(-128, 0)
scale = Vector2(3, 3)
texture = ExtResource("1_1dxx3")

[node name="Middle" type="Sprite2D" parent="Slots"]
self_modulate = Color(0.258824, 0.258824, 0.258824, 0.192157)
scale = Vector2(3, 3)
texture = ExtResource("1_1dxx3")

[node name="Right" type="Sprite2D" parent="Slots"]
self_modulate = Color(0.258824, 0.258824, 0.258824, 0.192157)
position = Vector2(128, 0)
scale = Vector2(3, 3)
texture = ExtResource("1_1dxx3")

[node name="Lanes" type="Node2D" parent="."]
position = Vector2(576, 224)

[node name="ColorRect" type="ColorRect" parent="Lanes"]
offset_left = -186.0
offset_top = -54.0
offset_right = -66.0
offset_bottom = 443.0
color = Color(0.160784, 0.160784, 0.160784, 0.662745)

[node name="ColorRect3" type="ColorRect" parent="Lanes"]
offset_left = -62.0
offset_top = -54.0
offset_right = 58.0
offset_bottom = 443.0
color = Color(0.160784, 0.160784, 0.160784, 0.662745)

[node name="ColorRect2" type="ColorRect" parent="Lanes"]
offset_left = 62.0
offset_top = -54.0
offset_right = 182.0
offset_bottom = 443.0
color = Color(0.160784, 0.160784, 0.160784, 0.662745)

[node name="ColorRect4" type="ColorRect" parent="Lanes"]
offset_left = -187.0
offset_top = -54.0
offset_right = 183.0
offset_bottom = 46.0
color = Color(0.21876, 0.136884, 0.123985, 0.662745)

[node name="ColorRect5" type="ColorRect" parent="Lanes"]
offset_left = -187.0
offset_top = 133.0
offset_right = 183.0
offset_bottom = 233.0
color = Color(0.21876, 0.136884, 0.123985, 0.662745)

[node name="ColorRect6" type="ColorRect" parent="Lanes"]
offset_left = -187.0
offset_top = 324.0
offset_right = 183.0
offset_bottom = 424.0
color = Color(0.21876, 0.136884, 0.123985, 0.662745)

[node name="EvilLeft" type="Sprite2D" parent="Lanes"]
self_modulate = Color(0.71, 0.31595, 0.1846, 1)
position = Vector2(-128, 376)
scale = Vector2(3, 3)
texture = ExtResource("1_1dxx3")

[node name="EvilMiddle" type="Sprite2D" parent="Lanes"]
self_modulate = Color(0.71, 0.31595, 0.1846, 1)
position = Vector2(0, 376)
scale = Vector2(3, 3)
texture = ExtResource("1_1dxx3")

[node name="EvilRight" type="Sprite2D" parent="Lanes"]
self_modulate = Color(0.71, 0.31595, 0.1846, 1)
position = Vector2(128, 376)
scale = Vector2(3, 3)
texture = ExtResource("1_1dxx3")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(316, 225)
scale = Vector2(0.599609, 0.599609)
texture = ExtResource("3_t5ujd")

[node name="DebugMusicManager" type="Node" parent="."]
script = ExtResource("5_kf62a")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DebugMusicManager"]
stream = ExtResource("6_kf62a")

[node name="TrackLoader" type="Node" parent="DebugMusicManager"]
script = ExtResource("5_q5qk3")
